Fixed Deprecated APIs